--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea/codeStyles
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
