--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
     <parent>
         <artifactId>killbill-oss-parent</artifactId>
         <groupId>org.kill-bill.billing</groupId>
-        <version>0.140.55</version>
+        <version>0.142.1</version>
     </parent>
     <groupId>org.kill-bill.billing.plugin.java</groupId>
     <artifactId>adyen-plugin</artifactId>
     <name>Kill Bill OSGI Adyen plugin</name>
-    <version>0.5.11-SNAPSHOT</version>
+    <version>0.7.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <description>Kill Bill Adyen plugin</description>
     <url>http://github.com/killbill/killbill-adyen-plugin</url>
@@ -45,7 +45,7 @@
         <jsoup.version>1.8.3</jsoup.version>
         <!-- More recent versions than the core (JDK1.8+) -->
         <guava.version>21.0</guava.version>
-        <jackson.version>2.9.2</jackson.version>
+        <jackson.version>2.9.5</jackson.version>
     </properties>
     <dependencies>
         <dependency>
@@ -109,12 +109,10 @@
         <dependency>
             <groupId>org.kill-bill.billing.plugin.java</groupId>
             <artifactId>killbill-base-plugin</artifactId>
-	    <version>1.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.kill-bill.billing.plugin.java</groupId>
             <artifactId>killbill-base-plugin</artifactId>
-            <version>1.3.1</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -492,6 +490,10 @@
                             javax.naming.ldap;
                             javax.naming.spi;
                             javax.naming;
+                            sun.misc;
+                            sun.misc.unsafe;
+                            sun.security;
+                            sun.security.util;
                             org.osgi.service.log;
                             version="[0,3)",
                             *;resolution:=optional
