--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <groupId>org.kill-bill.billing.plugin.java</groupId>
     <artifactId>adyen-plugin</artifactId>
     <name>Kill Bill OSGI Adyen plugin</name>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.7.0</version>
     <packaging>bundle</packaging>
     <description>Kill Bill Adyen plugin</description>
     <url>http://github.com/killbill/killbill-adyen-plugin</url>
@@ -601,6 +601,11 @@
 
     <!-- Squaretrade nexus repository -->
     <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>ST Releases</name>
+            <url>http://nexus.squaretrade.com/content/repositories/releases</url>
+        </repository>
         <snapshotRepository>
             <id>snapshots</id>
             <name>ST Snapshots</name>
@@ -608,6 +613,11 @@
         </snapshotRepository>
     </distributionManagement>
     <repositories>
+        <repository>
+            <id>releases</id>
+            <name>ST Releases</name>
+            <url>http://nexus.squaretrade.com/content/repositories/releases</url>
+        </repository>
         <repository>
             <id>snapshots</id>
             <name>ST Snapshots</name>
