--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <groupId>org.kill-bill.billing.plugin.java</groupId>
     <artifactId>adyen-plugin</artifactId>
     <name>Kill Bill OSGI Adyen plugin</name>
-    <version>0.7.0</version>
+    <version>0.7.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <description>Kill Bill Adyen plugin</description>
     <url>http://github.com/killbill/killbill-adyen-plugin</url>
@@ -346,10 +346,7 @@
                         <Export-Package>
                             org.killbill.billing.plugin.service
                         </Export-Package>
-                        <Private-Package>
-			    org.killbill.billing.plugin.adyen.*;
-                            org.killbill.adyen.*;
-                        </Private-Package>
+                        <Private-Package>org.killbill.billing.plugin.adyen.*</Private-Package>
                         <!-- Optional resolution because exported by the Felix system bundle -->
                         <Import-Package>
                             org.killbill.billing.account.api;
